file(GLOB hdrs "*.h*") #Добавляем в переменную hdrs все файлы с расширением .h
file(GLOB srcs "*.cpp")#Добавляем в переменную srcs все файлы с расширением .h

add_library(${lib} STATIC ${srcs} ${hdrs} TQueueList.cpp TQueueList.h TListIterator.cpp TListIterator.h TListElem.cpp TListElem.h TList.cpp TList.h) #Создаем статическую библиотеку с именем из переменной ${MyLib1}, объявленной в родительском CMake файле (локальные переменные переносятся в наследников), в неё добавляются файлы из переменных ${srcs} и ${hdrs}
